--- a/package.json
+++ b/package.json
@@ -11,30 +11,20 @@
     "cms"
   ],
   "homepage": "https://cezerin.com",
-  "bugs": "https://github.com/cezerin2/cezerin2/issues",
-  "license": "MIT",
-  "author": {
-    "name": "Restmount <jsonmount@gmail.com>",
-    "url": "https://github.com/restmount"
+  "bugs": {
+    "url": "https://github.com/cezerin2/cezerin2/issues"
   },
+  "license": "MIT",
+  "author": "Restmount <jsonmount@gmail.com> (https://github.com/restmount)",
   "contributors": [
-    {
-      "name": "Luke Busstra <luke.busstra@gmail.com>",
-      "url": "https://github.com/lubuss"
-    },
-    {
-      "name": "Restmount <jsonmount@gmail.com>",
-      "url": "https://github.com/restmount"
-    },
-    {
-      "name": "Sergey Onufrienko <sergey@onufrienko.com>",
-      "url": "https://github.com/sonufrienko"
-    }
+    "Luke Busstra <luke.busstra@gmail.com> (https://github.com/lubuss)",
+    "Restmount <jsonmount@gmail.com> (https://github.com/restmount)",
+    "Sergey Onufrienko <sergey@onufrienko.com> (https://github.com/sonufrienko)"
   ],
   "main": "src/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/cezerin2/cezerin2"
+    "url": "git+https://github.com/cezerin2/cezerin2.git"
   },
   "scripts": {
     "setup": "node -r esm src/setup.js",
@@ -44,7 +34,8 @@
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --write \"src/**/*.js\" \"theme/**/*.js\"",
     "precommit": "lint-staged",
-    "start": "node -r esm src/index.js"
+    "start": "node -r esm src/index.js",
+    "compile": "babel src complied .compiled --source-maps --watch"
   },
   "lint-staged": {
     "*.js": [
@@ -54,13 +45,10 @@
   },
   "dependencies": {
     "aws-sdk": "^2.455.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
@@ -70,7 +58,6 @@
     "concurrently": "^4.0.1",
     "cookie-parser": "^1.4.3",
     "cryptr": "^4.0.2",
-    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.0.1",
     "eslint-plugin-import": "^2.14.0",
@@ -82,8 +69,8 @@
     "express-jwt": "^5.3.1",
     "formidable": "^1.2.1",
     "fs-extra": "^7.0.0",
-    "handlebars": "^4.1.2",
-    "helmet": "^3.13.0",
+    "handlebars": "^4.5.3",
+    "helmet": "^3.21.2",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
     "jsonwebtoken": "^8.3.0",
@@ -115,5 +102,15 @@
   "engines": {
     "node": "^8.0.0",
     "npm": "^5.0.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
+    "eslint": "^6.7.1"
+  },
+  "directories": {
+    "doc": "docs"
   }
 }
